--- a/my_secret_keeper/package.json
+++ b/my_secret_keeper/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.24.0",
     "core-js": "^3.6.5",
     "firebase": "^9.6.1",
+    "jest": "^27.4.5",
     "register-service-worker": "^1.7.1",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
